--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>School</title>
 </head>
 <body>
-    
+    <header>
+    <h1>XYZ School</h1>
+    <button>Home</button>
+    <button>Gallery</button>
+    <button>Contact Us</button>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
