Added side bar elements

--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
     <button>Contact Us</button>
     </header>
     <main>
-
+     <div>
+         <h2>Notifications</h2>
+         <p>
+             ->Admissions open for Class 1-9<br>
+             <br>
+             ->Class 10 Results to be announced soon <br>
+             <br>
+             ->Class 1-9 promoted based on UGC Guidelines<br>
+         </p>
+     </div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
