Added main div block

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
              ->Class 1-9 promoted based on UGC Guidelines<br>
          </p>
      </div>
+     <div>
+         <p>
+           <h3>About</h3>
+           This school is 20 years old and is know for its excellence in teaching students with the help of latest technologies and having the best teaching staff . It is located in 
+           Pune,Maharastra and Affiliated to CBSE. 
+        </p>
+     </div>
     </main>
     <footer>
 
