Added class names to elements

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-    <h1>XYZ School</h1>
-    <button>Home</button>
-    <button>Gallery</button>
-    <button>Contact Us</button>
+    <h1 class="header-name">XYZ School</h1>
+    <button class="header-button">Home</button>
+    <button class="header-button">Gallery</button>
+    <button class="header-button">Contact Us</button>
     </header>
     <main>
-     <div>
+     <div class="side-bar">
          <h2>Notifications</h2>
          <p>
              ->Admissions open for Class 1-9<br>
@@ -24,7 +24,7 @@
              ->Class 1-9 promoted based on UGC Guidelines<br>
          </p>
      </div>
-     <div>
+     <div class="main-block">
          <p>
            <h3>About</h3>
            This school is 20 years old and is know for its excellence in teaching students with the help of latest technologies and having the best teaching staff . It is located in 
