--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
     <h1 class="header-name">XYZ School</h1>
-    <button class="header-button">Home</button>
-    <button class="header-button">Gallery</button>
     <button class="header-button">Contact Us</button>
+    <button class="header-button">Gallery</button>
+    <button class="header-button">Home</button>
     </header>
     <main>
      <div class="side-bar">
