--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School</title>
     <link rel="stylesheet" href="style.css">
+    <script src="basic.js"></script>
 </head>
 <body>
     <header>
-    <h1 class="header-name">XYZ School</h1>
+    <h1 class="header-name" onclick="welcome()">XYZ School</h1>
     <button class="header-button">Contact Us</button>
     <button class="header-button">Gallery</button>
-    <button class="header-button">Home</button>
+    <button class="header-button" onclick="welcome()">Home</button>
     </header>
     <main>
      <div class="side-bar">
